--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,6 @@
         "psr-4": {
             "Siokas\\LaravelEmbedDirectives\\": "laravelembeddirectives/src"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
