--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,21 @@
     "name": "siokas/laravelembeddirectives",
     "description": "Provides a custom Laravel Blade directive to embed anything in the view using the Embed\\Embed package.",
     "keywords": ["laravel", "repository", "blade", "embed", "social", "media"],
+    "license": "MIT",
     "require": {
         "embed/embed": "^2.7"
     },
-    "license": "MIT",
     "authors": [
         {
             "name": "Apostolos Siokas",
             "email": "apostolossiokas@gmail.com"
         }
     ],
+     "autoload": {
+        "psr-4": {
+            "Siokas\\LaravelEmbedDirectives\\": "src/"
+        }
+    },
     "minimum-stability": "dev",
     "support": {
     "email": "apostolossiokas@gmail.com"
